# edu-curator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  alembic.ini  architecture.md  crs.md  docker-compose.yml  dsr.md  engineering_status_report.md  eps.md  plan.md  pyproject.toml  railway.toml  requirements.txt  rws.md  smos.md  supabase_schema.sql
dashboard/: api.js  app.js  app_streamlit.py  auth.js  index.html  serve.py  state.js  style.css  utils.js
data/: documents.json  token_usage.json
infra/: caddy.conf  edu-curator.service
migrations/: data_integrity_advanced.sql  data_integrity_constraints.sql  data_integrity_uniqueness.sql  env.py  scalability_and_cleanup.sql  security_hardening_migration.sql  submit_review_rpc.sql
prompts/: consistency_check.md
scratch/: apply_advanced_migration.py  apply_hardening_migration.py  apply_review_rpc.py  apply_uniqueness_migration.py  check_all_jobs.py  check_browser_errors.py  check_chunks_11.py  check_content_triggers.py  check_db_js.js  check_fields_status.py  check_overrides.py  check_sources_11.py  check_topic_1_triggers.py  check_topic_knowledge_columns.py  compute_sri.py  create_eval_jobs_table.py  extract_all_steps.py  extract_latex.py  find_correct_pooler.py  find_region.py  find_region_6543.py  fix_override_privilege.py  inspect_eval_results.py  inspect_sn11.py  inspect_sn11_knowledge.py  print_job_logs.py  query_db.py  read_last_user_request.py  region_results.txt  run_find_region.py  search_all_db.js  search_all_ece.py  search_api_review.py  search_app_js.py  search_ece.py  (+34 more)
(+49 files in other folders)
