[project]
name = "edu-curator"
version = "0.1.0"
description = "Local MVP for syllabus-aligned educational content curation."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.9",
  "python-dotenv>=1.0",
  "litellm>=1.83.0"
]

[project.optional-dependencies]
ai = [
  "openai>=1.0",
  "sentence-transformers>=3.0",
  "scikit-learn>=1.5"
]
ingest = [
  "pymupdf>=1.24",
  "python-docx>=1.1"
]

[project.scripts]
edu-curator = "edu_curator.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B905", "B023", "B008", "B007", "B904", "F841", "E402"]

[tool.ruff.format]
quote-style = "double"
